# Video-production

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  media.py  prompts.py
backend/app/core/: config.py  cors.py  logging.py
backend/app/schemas/: job.py  media.py  prompt.py
backend/app/services/: comfyui.py  llm.py  storage.py
backend/app/utils/: identifiers.py
backend/tests/: test_health.py
docs/: requirements.md
scripts/: run-backend.ps1  run-tests.ps1
