[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-production-backend"
version = "0.1.0"
description = "Backend services for the Video-production project"
authors = [{name = "Video Production Team"}]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.7",
]

[tool.pytest.ini_options]
pythonpath = ["../"]
addopts = "-ra"
